# MyMalloc

./: .gitignore  Makefile.am  README_pt_br.MD  configure.ac
src/: main.c
src/mymalloc/: malloc.c  mem.h  mem_debug.c
